[package]

name = "boids"
version = "0.0.1"
authors = [ "ivko.mv@gmail.com" ]

[[bin]]

name = "boids" # the name of the executable to generate

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston"

[dependencies.graphics]
git = "https://github.com/PistonDevelopers/rust-graphics"

[dependencies.sdl2_game_window]
git = "https://github.com/PistonDevelopers/sdl2_game_window"

[dependencies.opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"
