[package]

name = "boids"
version = "0.0.2"
authors = [ "ivko.mv@gmail.com" ]

[[bin]]

name = "boids" # the name of the executable to generate

[dependencies]
num = "0.1.*"
rand = "0.3.*"
nalgebra = ">=0.2.16"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston"

[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics"
